# ed_object_models

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  package.xml  setup.py
CMake/: cmake_sdf_conversion.py
conversion_test_files/: model.yaml  xmltest.xml
env-hooks/: 99.ed_object_models.bash
models/4rwc2024/dishwasher/: model.config  model.sdf
models/amigo_case/: model.config  model.sdf
models/bed/: model.config  model.sdf  model.yaml
models/biestheuvel/: model.sdf
models/biestheuvel/walls/: model.sdf
models/cabinet/: model.config  model.sdf
models/coffee_table/: model.config  model.sdf  model.yaml
models/corridor/: model.config  model.sdf
models/corridor_long/: model.config  model.sdf
models/cover/: model.config  model.sdf  model.yaml
models/cover/walls/: covered.stl  model.config  model.sdf
models/ddw/: model.config  model.sdf
models/ddw/chair/: model-1_6.sdf  model.config  model.sdf
models/ddw/couch/: model-1_6.sdf  model.config  model.sdf  model.yaml
models/ddw/desk/: model.config  model.sdf  model.yaml
models/ddw/salon/: model-1_6.sdf  model.config  model.sdf  model.yaml
models/ddw/sidetable/: model.config  model.sdf  model.yaml
models/ddw/table/: model-1_6.sdf  model.config  model.sdf  model.yaml
models/ddw/walls/: model.config  model.sdf
models/door/: model.config  model.sdf
models/door2/: model.config
models/door2/meshes/: door_frame.STL  door_handle.STL  door_locker.STL  door_plate.STL
models/door2/scripts/: door.material  handle.material
models/door2/urdf/: door2.csv  door2.sdf  door2.urdf
models/door_biestheuvel/: model.config  model.sdf
models/door_wooden/: model.config  model.sdf
models/empty/: model.config  model.sdf
models/expedit/cabinet/: model.config  model.sdf  model.yaml
models/expedit/door/: model.config  model.sdf  model.yaml
models/floor/: model.config  model.sdf  model.yaml
models/gladys_appartment/: model.yaml
models/gladys_appartment/kitchen_counter/: model.yaml
models/gladys_appartment/table_octagonal/: model.yaml
models/gladys_appartment/tray_table/: model.yaml
models/gladys_appartment/walls/: model.yaml
models/hallway1/: model.yaml
models/hallway1/walls/: model.yaml
models/hallway3/: model.yaml
models/hallway3_1/: model.yaml
models/hallway3_2/: model.yaml
models/hallway3_3/: model.yaml
models/hallway3_3/walls/: model.yaml
models/hallway3_5/: model.config  model.sdf  model.yaml
models/hallway3_5/walls/: map.yaml  model.config  model.sdf
models/hero_case/: model.config  model.sdf
models/human/: model.config  model.sdf
models/impuls/: model.config  model.sdf
models/impuls/couch_long/: model.config  model.sdf
models/impuls/couch_short/: model.config  model.sdf
models/impuls/fridge/: model.config  (+1 more)
models/laptop_case/: model.config  model.sdf  model.yaml
models/learn_objects/: model.config  model.sdf
models/left_door/: model.config  model.sdf
models/mobi_dick/: model.config  model.sdf
models/model_test/: model.config  model.sdf
models/movable_table/: model.config  model.sdf
models/move_scenario_1/: model.config  model.sdf
models/move_scenario_2/: model.sdf
models/paperbin/: model.config  model.sdf
models/perception_learning/: model.config  model.sdf
models/rein_experiment/: model.config  model.sdf
models/reo2016/: model.config  model.sdf
models/rgo2015/: model.config  model.sdf
models/rgo2015_final/: model.config  model.sdf
models/rgo2017/: model.config  model.sdf  model.yaml
models/rgo2018/: model.config  model.sdf  model.yaml
models/rgo2019/: calc_rooms.py  model.config  model.sdf  model.yaml  rooms.txt
models/right_door/: model.config  model.sdf
models/robotics_testlab_B/: model.config  model.sdf
models/robotics_testlabs/: model-1_6.sdf  model.config  model.sdf  model.yaml
models/robotics_testlabs_empty/: model.config  model.sdf
models/rokus_experiment1/: model.yaml
models/rokus_experiment2/: model.yaml
models/rokus_experiment3/: model.yaml
models/rokus_experiments/: model.yaml
models/room/: model-1_6.sdf  model.config  model.sdf
models/rosebv/: model.config  model.sdf
models/rpo2023/: model.config  model.sdf
models/rwc2013/: model.config  model.sdf
models/rwc2015/: model.config  model.sdf  model.yaml
models/rwc2015_empty/: model.config  model.sdf
models/rwc2016a/: model.config  model.sdf
models/rwc2016b/: model.config  model.sdf
models/rwc2017/: model.config  model.sdf
models/rwc2018/: calc_rooms.py  model.config  model.sdf
models/rwc2019/: model.config  model.sdf
models/rwc2022/: model.config  model.sdf
models/rwc2023/: model.config  model.sdf
models/rwc2024/: model.config  model.sdf
models/siza_demo/: model.yaml  model_origin.yaml
models/siza_demo_ogo/: model.yaml
models/table/: model.config  model.sdf
models/table_120x80x76/: model-1_6.sdf  model.config  model.sdf  model.yaml
models/table_140x70x76/: model.yaml
models/table_160x80x76/: model.yaml
models/table_200x100x76/: model.config  model.sdf  model.yaml
models/table_205x105x76/: model.config  model.sdf
models/table_2legs_180x80x76/: model.config  model.sdf  model.yaml
models/table_ahrend_180x90x75_with_drawers/: model.config  model.sdf  model.yaml
models/test/: model.config  model.sdf
models/test_sdf/: model.config
models/trashbin/: model-1_6.sdf  model.config  model.sdf  model.yaml
models/trashbin_siza/: model.yaml
models/tray_table/: model.yaml
models/tue.library/: model.config  model.sdf
models/tue_library/: model.config  model.sdf  model.yaml
models/walls/: model.config  model.sdf  model.yaml
models/waypoint/: model.config  model.sdf
models/wonderland/: model.config  model.sdf
models/wooden_table/: model.yaml
models/world_model_illustration/: model.config  model.sdf
scripts/: convert_yaml_to_sdf  convert_yaml_to_sdf.py  create-model  create-model.py  dump-ed.py  generate_qr_codes.py  spawn_sdf_in_gazebo.py
src/: shape_loader.cpp
src/ed_object_models/: __init__.py  conversion_sdf.py  sdf_tools.py  spawn_sdf_in_gazebo.py
test/: test_import.py  test_triangulation.cpp
(+958 files in other folders)
