<?xml version="1.0"?>
<package format="3">
  <name>ed_object_models</name>
  <version>0.0.0</version>
  <description>The ed_object_models package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ed</exec_depend>
  <exec_depend>ed_msgs</exec_depend>
  <exec_depend>gazebo_models</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geolib2</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python_orocos_kdl</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>tf</exec_depend>

  <doc_depend>python-sphinx</doc_depend>
  <doc_depend>python-sphinx-autoapi-pip</doc_depend>
  <doc_depend>python-sphinx-rtd-theme-pip</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
